src/policy/snapshots/sigsum__policy__tests__unknown_quorum_name.snap
---
source: src/policy/mod.rs
expression: builder.build()
---
Policy {
    logs: {},
    witnesses: {},
    quorums: {},
    quorum: None,
}
